feat: edit emergency contact DTO, add id